; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/gdi/ntgdi/extr_freetype.c_RemoveCachedEntry.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/gdi/ntgdi/extr_freetype.c_RemoveCachedEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@TAG_FONT = common dso_local global i32 0, align 4
@g_FontCacheNumEntries = common dso_local global i64 0, align 8
@MAX_FONT_CACHE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_4__*)* @RemoveCachedEntry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @RemoveCachedEntry(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = call i32 (...) @ASSERT_FREETYPE_LOCK_HELD()
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = trunc i64 %6 to i32
  %8 = call i32 @FT_Done_Glyph(i32 %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = call i32 @RemoveEntryList(i32* %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %13 = load i32, i32* @TAG_FONT, align 4
  %14 = call i32 @ExFreePoolWithTag(%struct.TYPE_4__* %12, i32 %13)
  %15 = load i64, i64* @g_FontCacheNumEntries, align 8
  %16 = add nsw i64 %15, -1
  store i64 %16, i64* @g_FontCacheNumEntries, align 8
  %17 = load i64, i64* @g_FontCacheNumEntries, align 8
  %18 = load i64, i64* @MAX_FONT_CACHE, align 8
  %19 = icmp sle i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @ASSERT(i32 %20)
  ret void
}

declare dso_local i32 @ASSERT_FREETYPE_LOCK_HELD(...) #1

declare dso_local i32 @FT_Done_Glyph(i32) #1

declare dso_local i32 @RemoveEntryList(i32*) #1

declare dso_local i32 @ExFreePoolWithTag(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
